# pysoarlib

./: .editorconfig  .gitignore  README.md  pyproject.toml
SetAPIKey/: GoCASC2.lnk  GoCASC2.ps1  GoThorSoar.lnk  GoThorSoar.ps1  README.md
src/pysoarlib/: .editorconfig  AgentConnector.py  Config.py  IdentifierExtensions.py  README.md  SVSCommands.py  SoarClient.py  SoarUtils.py  SoarWME.py  TimeConnector.py  WMInterface.py  __init__.py
src/pysoarlib/connectors/: Query.py  QueryConnector.py  Response.py
src/pysoarlib/connectors/language_model/: LLM.py  LMConnector.py  LMResponse.py  LMResult.py  README.md  __init__.py
src/pysoarlib/connectors/language_model/templates/: meta-template.txt
src/pysoarlib/connectors/language_model/templates/context-history-desireds/: config.json  user.txt
src/pysoarlib/connectors/language_model/templates/llm-templates/: causal-discrepency-hypothesis.json  context-history-desireds.json  drone-predict-next-port-no-previous.json  drone-predict-next-port.json  drone-question-dag.json  drone-question-mode-A.json  drone-question-mode-B.json  drone-question-mode-a.json  drone-question-mode-a2.json  drone-question-mode-b.json  drone-question-mode-combined.json  drone-question-tree.json  (+16 more)
src/pysoarlib/example/: run_agent.py
src/pysoarlib/src/pysoarlib/: SoarClient.py
src/pysoarlib/util/: PrintoutIdentifier.py  WMNode.py  __init__.py  add_json_to_soar_identifier.py  extract_wm_graph.py  parse_wm_printout.py  remove_tree_from_wm.py  soar_identifier_to_json.py  update_wm_from_tree.py
src/pysoarlib/util/sml/: __init__.py
(+96 files in other folders)
