[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysoarlib"
version = "0.0.2"
authors = [
  { name="Aaron Mininger", email="amininger@umich.edu" },
]
description = "Simplify the Python/Soar SML interface"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	# "Programming Language :: Soar",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/Center-for-Integrated-Cognition/pysoarlib"
"Bug Tracker" = "https://github.com/Center-for-Integrated-Cognition/pysoarlib/issues"
